<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="io.github.guilhermebferreira.pesoideal.CalcularIMC">
    <!--
     *   Atividade 2.2
     *   Guilherme Batista Ferreira
     *   Desenvolvimento Android
        -->

    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/calc_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <ScrollView
        android:id="@+id/imc_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/imc_calc_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/labelPeso"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/prompt_peso"
                android:textAlignment="center" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/peso"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_peso"
                    android:inputType="numberDecimal"
                    android:maxLines="1" />

            </android.support.design.widget.TextInputLayout>

            <TextView
                android:id="@+id/labelAltura"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/prompt_altura"
                android:textAlignment="center" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/altura"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_altura"
                    android:inputType="numberDecimal"
                    android:maxLines="1" />

            </android.support.design.widget.TextInputLayout>

            <TextView
                android:id="@+id/labelIdade"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/prompt_idade"
                android:textAlignment="center" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <EditText
                    android:id="@+id/idade"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_idade"
                    android:inputType="number"
                    android:maxLines="1" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </android.support.design.widget.TextInputLayout>


            <RadioGroup
                android:id="@+id/radioSexo"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                <TextView
                    android:id="@+id/textView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Sexo" />

                <RadioButton
                    android:id="@+id/radioMasculinoo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:checked="false"
                    android:text="@string/prompt_radio_masc" />

                <RadioButton
                    android:id="@+id/radioFeminin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:checked="false"
                    android:text="@string/prompt_radio_fem" />


            </RadioGroup>

            <Button
                android:id="@+id/calc_button"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/action_calcular"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/label_imc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_imc"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/imc_result"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text=""
                android:textAlignment="center"
                android:textSize="24sp"
                android:textStyle="bold" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>
